# Spotify_V2

./: .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
dags/: dbt_dag.py  duckdb_ingest.py  pipeline.py  s3_upload.py
dbt/Spotify_V2/: .user.yml  dbt_project.yml  dbt_project_env.py  dev.duckdb  profiles.yml
dbt/Spotify_V2/models/: sources.yml
dbt/Spotify_V2/models/mart/: track_info.sql
dbt/Spotify_V2/models/raw/: streaming_history.sql
dbt/Spotify_V2/models/staging/: stage.sql
